--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                 <li><a href="{{ site.baseurl }}/work">Work</a></li>
                 <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
                 <li><a href="#">Service</a></li>
-                <li><a href="#">Docs</a></li>
+                <li><a href="{{ site.baseurl }}/docs">Docs</a></li>
                 <li><a href="#">Open Source</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
