add  target="_blank"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,9 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
                 <li><a href="{{ site.baseurl }}/work">Work</a></li>
-                <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+                <li><a href="{{ site.baseurl }}/blog" target="_blank">Blog</a></li>
                 <li><a href="#">Service</a></li>
-                <li><a href="{{ site.baseurl }}/docs">Docs</a></li>
+                <li><a href="{{ site.baseurl }}/docs" target="_blank">Docs</a></li>
                 <li><a href="#">Open Source</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
