--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
                 <li><a href="{{ site.baseurl }}/blog" target="_blank">Blog</a></li>
                 <li><a href="#">Service</a></li>
                 <li><a href="{{ site.baseurl }}/docs" target="_blank">Docs</a></li>
-                <li><a href="#">Open Source</a></li>
+                <li><a href="https://github.com/opsforce">Open Source</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
