--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/work">Work</a></li>
+                <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
                 <li><a href="{{ site.baseurl }}/blog" target="_blank">Blog</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="{{ site.baseurl }}/docs" target="_blank">Docs</a></li>
                 <li><a href="https://github.com/opsforce" target="_blank">Open Source</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
