--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                 <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
                 <li><a href="{{ site.baseurl }}/blog" target="_blank">Blog</a></li>
                 <li><a href="https://github.com/opsforce" target="_blank">Open Source</a></li>
-                <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+                <li><a href="{{ site.baseurl }}/about">About</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
