--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
             <li><a href="#">Terms</a></li>
           </ul>
         </div>
-        <p>&copy; 2017 <a href="{{ site.baseurl }}/">OPSFORCE</a>. <a href="https://movie.douban.com/subject/1302987" target="_blank" title="珍珠港 Pearl Harbor">Do not tell me, it can't be done! </a></p>
+        <p>&copy; 2017 <a href="{{ site.baseurl }}/">OPSFORCE</a>.</p>
       </div>
     </div>
   </div>
