--- a/_includes/custom_comments_provider.html
+++ b/_includes/custom_comments_provider.html
@@ -1,7 +1,7 @@
 <hr />
 <h1>Comments</h1>
 <p>Insert your custom comment provider like <a href="https://disqus.com">Disqus</a> or <a href="https://posativ.org/isso">Isso</a> here.</p>
-<div id="disqus_thread"></div>
+<p><div id="disqus_thread"></div>
 <script>
 
 /**
@@ -20,4 +20,4 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
